# jeanbaptiste

./: CMakeLists.txt  LICENSE.md  README.md
JeanBaptiste/: CMakeLists.txt  cmakelists.txt
JeanBaptiste.Test/: CMakeLists.txt  cmakelists.txt
JeanBaptiste.Test/include/: AlgorithmFixture.h  AlgorithmResultAnalysis.h  StringConversion.h  TestCaseLoader.h  WindowingAnalysis.h
JeanBaptiste.Test/src/: FixtureBitReversal.cpp  FixtureFft.cpp  FixtureRadix2.cpp  FixtureRadix4.cpp  FixtureRadixSplit24.cpp  FixtureSinCos.cpp  FixtureWindowCalculation.cpp  test.cpp
JeanBaptiste.Test/test cases/: WinBartlett cosine (n=128).xml  WinBartlettTest.xml  WinBlackmanHarrisTest.xml  WinBlackmanTest.xml  WinCosineTest.xml  WinFlatTopTest.xml  WinHammingTest.xml  WinWelchTest.xml  WinvonHannTest.xml  cosine (n=128) + Bartlett.xml  cosine (n=128).xml  square pulse (n=128).xml  square pulse (n=64).xml
JeanBaptiste/include/: Algorithm.h  AlgorithmFactory.h  ExecutableAlgorithm.h  Normalization.h  Options.h  SubTask.h
JeanBaptiste/include/basic/: Abs.h  BitReversalIndexSwapping.h  Ceil.h  Floor.h  HeronSquareRoot.h  Normalization.h  Round.h  SineCosine.h
JeanBaptiste/include/core/: Radix2.h  Radix4.h  RadixSplit24.h  SplitRadix.h
JeanBaptiste/include/normalization/: DivisionByLengthNormalization.h  NoNormalization.h  SquareRootNormalization.h
JeanBaptiste/include/tools/: RealComplexConversion.h
JeanBaptiste/include/windowing/: BartlettWindow.h  BlackmanHarrisWindow.h  BlackmanWindow.h  CosineWindow.h  ExecuteWindowOnComplexData.h  FlatTopWindow.h  HammingWindow.h  NoWindow.h  VonHannWindow.h  WelchWindow.h  WindowExecutionFunctor.h
JeanBaptiste/src/: jeanbaptiste.cpp
gsl/: multi_span  span
